--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 nltk
 tensorflow
-sklearn
+scikit-learn
+pandas
 git+https://github.com/maxjf1/files-ms-client-python#egg=files-ms-client-python
 git+https://github.com/easytopic-project/client_python_m2p
