--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ nltk
 tensorflow
 scikit-learn
 pandas
+numpy
+openpyxl
 git+https://github.com/maxjf1/files-ms-client-python#egg=files-ms-client-python
 git+https://github.com/easytopic-project/client_python_m2p
